--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "firewave",
+  "name": "slipe",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,17 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-blur": "~13.0.2",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-svg": "15.2.0",
-    "react-native-svg-transformer": "^1.5.0",
-    "expo-asset": "~10.0.10",
-    "react-native-safe-area-context": "4.10.5"
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/material-top-tabs": "^7.2.9",
+    "@react-navigation/native": "^7.1.6",
+    "expo": "~52.0.43",
+    "expo-blur": "~14.0.3",
+    "expo-navigation-bar": "~4.0.9",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-pager-view": "6.5.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
