--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/material-top-tabs": "^7.2.9",
     "@react-navigation/native": "^7.1.6",
     "expo": "~52.0.43",
     "expo-blur": "~14.0.3",
+    "expo-linear-gradient": "~14.0.2",
     "expo-navigation-bar": "~4.0.9",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
