--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "expo-font": "~13.0.4",
+    "expo-splash-screen": "~0.29.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
