--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@react-navigation/native": "^7.1.6",
     "expo": "~52.0.43",
     "expo-blur": "~14.0.3",
+    "expo-click-outside": "^0.1.0",
+    "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-navigation-bar": "~4.0.9",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
@@ -24,9 +27,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "expo-font": "~13.0.4",
-    "expo-splash-screen": "~0.29.22"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
