--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/material-top-tabs": "^7.2.9",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~52.0.43",
+    "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
     "expo-click-outside": "^0.1.0",
     "expo-font": "~13.0.4",
