--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.6",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-click-outside": "^0.1.0",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
