--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/material-top-tabs": "^7.2.9",
     "@react-navigation/native": "^7.1.6",
+    "@reduxjs/toolkit": "^2.7.0",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-click-outside": "^0.1.0",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
+    "expo-media-library": "~17.0.6",
     "expo-navigation-bar": "~4.0.9",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -28,7 +30,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
