--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-camera": "~16.0.18",
     "expo-click-outside": "^0.1.0",
     "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-media-library": "~17.0.6",
     "expo-navigation-bar": "~4.0.9",
