--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.9.0",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-click-outside": "^0.1.0",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
@@ -26,9 +28,11 @@
     "expo-navigation-bar": "~4.0.9",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "^4.0.9",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
