--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.7.0",
+    "@shopify/flash-list": "1.7.3",
     "axios": "^1.9.0",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
