--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.7.0",
     "@shopify/flash-list": "1.7.3",
+    "@shopify/react-native-skia": "^1.12.4",
     "axios": "^1.9.0",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.18",
     "expo-click-outside": "^0.1.0",
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
