--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-system-ui": "^4.0.9",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
