--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.2.0",
+    "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
