--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@shopify/flash-list": "1.7.3",
     "@shopify/react-native-skia": "^1.12.4",
+    "@tamagui/animations-moti": "^1.126.13",
     "axios": "^1.9.0",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
