--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-click-outside": "^0.1.0",
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
+    "expo-gl": "~15.0.5",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-media-library": "~17.0.6",
@@ -32,6 +33,7 @@
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "^4.0.9",
+    "expo-three": "^8.0.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
