👽|🧹 --- Added Biome, Aliases, upscaled emojis(4x) and compressed it, and some UI updates

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@shopify/react-native-skia": "^1.12.4",
     "@tamagui/animations-moti": "^1.126.13",
     "axios": "^1.9.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "biome": "^0.3.3",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
     "expo-click-outside": "^0.1.0",
@@ -34,6 +36,7 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "^4.0.9",
     "expo-three": "^8.0.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
