--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tamagui/animations-moti": "^1.126.13",
     "axios": "^1.9.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "biome": "^0.3.3",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
