--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-sensors": "^7.3.6",
     "react-native-svg": "15.8.0",
     "react-native-view-shot": "~4.0.3",
     "react-native-vision-camera": "^4.6.4",
     "react-redux": "^9.2.0",
+    "rxjs": "^7.8.2",
     "tamagui": "^1.126.13"
   },
   "devDependencies": {
