--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@reduxjs/toolkit": "^2.7.0",
-    "@shopify/flash-list": "1.7.3",
+    "@shopify/flash-list": "v2.0.0-alpha.20",
     "@shopify/react-native-skia": "^1.12.4",
     "@tamagui/animations-moti": "^1.126.13",
     "axios": "^1.9.0",
