--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keychain": "^10.0.0",
     "react-native-mmkv": "^3.2.0",
