☄️|🧻 --- Replaced Redux with Zustand, highly improved and optimized camera in captureScreen, added some useful hooks, moved frontend hooks to dedicated UI folder and some little changes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,7 @@
         "@hooks/*": ["src/hooks/*"],
         "@constants/*": ["src/constants/*"],
         "@lib/*": ["src/lib/*"],
-        "@reducers/*": ["src/reducers/*"],
+        "@stores/*": ["src/stores/*"],
       }
     }
   }
