--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "react-native-svg": "15.8.0",
     "react-native-view-shot": "~4.0.3",
     "react-native-vision-camera": "^4.6.4",
-    "react-redux": "^9.2.0",
-    "tamagui": "^1.126.13"
+    "tamagui": "^1.126.13",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
