🧕🏻|🧘🏾‍♀ --- Fixed switcher async because of diffrence between local state and zustand's state and removed 4:3 aspect for video because low quality

--- a/app.json
+++ b/app.json
@@ -41,6 +41,14 @@
           "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos.",
           "isAccessMediaLocationEnabled": true
         }
+      ],
+      [
+        "react-native-vision-camera",
+        {
+          "cameraPermissionText": "$(PRODUCT_NAME) needs access to your Camera.",
+          "enableMicrophonePermission": true,
+          "microphonePermissionText": "$(PRODUCT_NAME) needs access to your Microphone."
+        }
       ]
     ]
   }
