--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keychain": "^10.0.0",
+    "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~3.16.1",
