--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-font": "~13.0.4",
     "expo-gl": "~15.0.5",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-media-library": "~17.0.6",
     "expo-navigation-bar": "~4.0.9",
