--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
         "@constants/*": ["src/constants/*"],
         "@lib/*": ["src/lib/*"],
         "@stores/*": ["src/stores/*"],
+        "@assets/*": ["assets/*"],
       }
     }
   }
