--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-mmkv": "^3.2.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-sensors": "^7.3.6",
