🧑🏿‍🚒|🧚 --- added i18n to app

--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "^4.0.9",
     "expo-three": "^8.0.0",
+    "i18next": "^25.3.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
+    "react-i18next": "^15.6.1",
     "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
     "react-native-blurhash": "^2.1.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keychain": "^10.0.0",
+    "react-native-localize": "^3.5.1",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-randombytes": "^3.6.1",
