--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-localize": "^3.5.1",
     "react-native-mime-types": "^2.5.0",
     "react-native-mmkv": "^3.2.0",
+    "react-native-quick-crypto": "^0.7.16",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
