--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native": "0.76.9",
     "react-native-blob-util": "^0.21.2",
     "react-native-blurhash": "^2.1.1",
+    "react-native-fast-confetti": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keychain": "^10.0.0",
