--- a/package.json
+++ b/package.json
@@ -9,27 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@d11/react-native-fast-image": "^8.11.1",
     "@react-native-community/hooks": "^100.1.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/material-top-tabs": "^7.2.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
-    "@reduxjs/toolkit": "^2.7.0",
     "@shopify/flash-list": "v2.0.0-alpha.20",
     "@shopify/react-native-skia": "^1.12.4",
     "@somesoap/react-native-image-palette": "^1.2.1",
-    "@tamagui/animations-moti": "^1.126.13",
     "axios": "^1.9.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "biome": "^0.3.3",
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
-    "expo-click-outside": "^0.1.0",
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
-    "expo-gl": "~15.0.5",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
@@ -38,16 +35,13 @@
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "^4.0.9",
-    "expo-three": "^8.0.0",
     "i18next": "^25.3.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.3.1",
     "react-i18next": "^15.6.1",
     "react-native": "0.76.9",
-    "react-native-blob-util": "^0.21.2",
     "react-native-blurhash": "^2.1.1",
     "react-native-fast-confetti": "^1.1.0",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keychain": "^10.0.0",
     "react-native-localize": "^3.5.1",
@@ -59,10 +53,8 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-sensors": "^7.3.6",
     "react-native-svg": "15.8.0",
     "react-native-video": "^6.16.1",
-    "react-native-view-shot": "~4.0.3",
     "react-native-vision-camera": "^4.6.4",
     "sonner-native": "^0.21.0",
     "tamagui": "^1.126.13",
