🧑🏾‍❤️‍🧑🏿|🕒 --- Did prototype of new tabbar lol

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,7 @@
         "@lib/*": ["src/lib/*"],
         "@stores/*": ["src/stores/*"],
         "@assets/*": ["assets/*"],
+        "@screens/*": ["src/screens/*"],
       }
     }
   }
