🛍️|💁🏼‍♂️ --- Removed blur for android in case of optimization and added edge2edge

--- a/app.json
+++ b/app.json
@@ -49,6 +49,15 @@
           "enableMicrophonePermission": true,
           "microphonePermissionText": "$(PRODUCT_NAME) needs access to your Microphone."
         }
+      ],
+      [
+        "react-native-edge-to-edge",
+        {
+          "android": {
+            "parentTheme": "Default",
+            "enforceNavigationBarContrast": false
+          }
+        }
       ]
     ]
   }
